--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
     "pug": "^3.0.2",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
