--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "sass": "sass styles/sass/styles.sass:public/css/styles.css",
     "sass-watch": "sass --watch styles/sass/styles.sass:public/css/styles.css",
-    "start": "npm run sass && nodemon server.js"
+    "iniciar-server": "nodemon server.js",
+    "start": "npm-run-all --parallel sass-watch iniciar-server"
   },
   "keywords": [],
   "author": "Carlos Romellon",
@@ -23,6 +24,7 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5"
   }
 }
