--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Carlos Romellon",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
