--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
-    "sass": "^1.75.0",
+    "sass": "^1.77.0",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
